--- a/GreenBridge/greenbridge/src/components/Header.css
+++ b/GreenBridge/greenbridge/src/components/Header.css
@@ -11,7 +11,7 @@
 header {
     width: 100%;
     height: 100px;
-    background: #ffffff; /* Set the header background to white */
+    background: #079602; /* Set the header background to white */
     display: flex;
     justify-content: center; /* Center contents horizontally */
     align-items: center;
@@ -25,7 +25,7 @@ header {
     width: 95%; /* Width of the box */
     max-width: 1200px; /* Limit the maximum width */
     padding: 0 2em;
-    background-color: white; /* Make the background of the box white */
+    background-color: rgb(22, 200, 25); /* Make the background of the box white */
     border-radius: 20px; /* Rounded corners for the box */
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Subtle shadow */
     height: 70px; /* Set a height for the box */
@@ -38,7 +38,7 @@ header {
     align-items: center; /* Align items vertically in the center */
 }
 
-.logo-container {
+.logo-containers {
     display: flex;
     align-items: center; /* Align logo and name in the center */
 }
@@ -162,6 +162,7 @@ header {
 .icon-label {
     font-size: 0.9em;
     margin-left: 0.3em;
+    color: #000;
 }
 
 /* Dropdown Styles */
