--- a/GreenBridge/greenbridge/src/Pages/Dashboard/Admin/AdminDashboard.css
+++ b/GreenBridge/greenbridge/src/Pages/Dashboard/Admin/AdminDashboard.css
@@ -8,7 +8,7 @@
   /* Sidebar styles */
   .sidebar {
     width: 250px;
-    background-color: #2c3e50;
+    background-color: #3f8e57;
     color: white;
     padding: 20px;
     display: flex;
@@ -49,7 +49,7 @@
   }
   
   .admin-header {
-    background-color: #3498db;
+    background-color: #318f3c;
     color: white;
     padding: 10px;
     text-align: center;
@@ -78,7 +78,7 @@
   }
   
   .functionality button {
-    background-color: #3498db;
+    background-color: #31a45f;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -88,7 +88,7 @@
   }
   
   .functionality button:hover {
-    background-color: #2980b9;
+    background-color: #19f94a;
   }
   
   /* Responsive Design */
