--- a/GreenBridge/greenbridge/src/components/Navbar.css
+++ b/GreenBridge/greenbridge/src/components/Navbar.css
@@ -1,115 +1,99 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-header{
+.navbar-container{
     width: 100%;
-    height: 50px;
-    background: #F8F8F8;
+    height: 70px;
     display: flex;
-    justify-content: space-around;
+    flex-direction: row;
     align-items: center;
-}
-.Logo{
-    color: rgb(44, 44, 44);
-    font-size: 1.5em;
-}
-.nav {
-    display: flex;
-    align-items: center;
-}
-.nav ol{
-    display: flex;
-    list-style: none;
-}
-.nav ol li{
-    margin: 1em;
-}
-.nav ol li a{
-    text-decoration: none;
-    padding: 0.2em 1.2em 0.9em 1.2em;
-    border-radius: 10px 10px 0 0;
-    color: rgb(39, 39, 39);
-    transition: all .4s;
-    position: relative;
-    z-index: 1;
-}
-.nav ol li a::before{
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 41px;
-    border-radius: 10px 10px 0 0;
-    background: #853333;
-    transform-origin: bottom;
-    background: linear-gradient(to right, #2C5364, #203A43, #0F2027); 
-    transform: scaleY(0.05);
-    z-index: -1;
-    transition: all .4s;
-}
-.nav ol li a:hover::before{
-    transform: scaleY(1.1);
-}
-.nav ol li a:hover{
-    color: white;
-}
-
-.btn{
-    position: relative;
-    width: 25px;
-    height: 25px;
-    -webkit-appearance: none;
-    appearance: none;
-    cursor: pointer;
-    display: none;
-}
-.btn::before{
-    content: '\f0c9';
-    position: absolute;
+    justify-content: space-between;
+    background-color: rgb(174, 219, 185);
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    /* position: fixed;
     top: 0;
     left: 0;
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 700;
-    font-size: 2em;
+    z-index: 1000 */
+}
+.left-section{
+    /* flex-basis: 25%; */
+    height: 100%;
+    margin-left: 8%;
+
 }
 
+/* h2{
+    color: rgb(255, 0, 72);
+} */
 
-
-@media (max-width: 1200px){
-    .btn{
-        display: flex;
-        z-index: 100;
-    }
-    header{
-        justify-content: space-between;
-        padding: 0 2em;
-    }
-    .nav{
-        width: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        display: flex;
-        justify-content: center;
-        background: #F8F8F8;
-        transform: translateY(-110%);
-        transition: all .4s;
-    }
-    input:checked ~ .nav{
-        transform: translateY(0%);
-    }
-    input:checked::before{
-        content: '\f00d';
-    }
+.logo{
+    height: 100%; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
-@media (max-width: 700px){
-    .nav ol{
-        flex-direction: column;
-        text-align: center;
-    }
+
+.logo img{
+    height: 50px;
+} 
+
+.right-section{
+    /* flex-basis: 75%; */
+   
+    margin-right: 8%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 20px;
+    gap: 25px;
+}
+.nav-links{
+    color: aliceblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+
+    /* width: 100%; */
+    height: 100%;
+}
+.nav-link a{
+    /* height: 100%; */
+    text-decoration: none;
+    cursor: pointer;
+    text-align: center;
+    color:rgb(255, 255, 255);
+
+}
+.nav-link a:hover{
+    font-weight:700;
+
+
+}
+.icon-links{
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    /* width: 100px; */
+    /* padding: 0 20px; */
+}
+.icon{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.icon{
+    height: 100%; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.icon img{
+    height: 30px;
 }
